[tool.poetry]
name = "fgshun-bst"
version = "0.1.0"
description = ""
authors = ["fgshun <fgshun@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
ipython = "^8.18.1"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
