[tool.poetry]
name = "fgshun-bst"
version = "0.1.0"
description = "アドベントカレンダー『Python/C API で 素朴な二分探索木を書いてみる』用"
authors = ["fgshun <fgshun@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.build]
script = "build.py"


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
ipython = "^8.18.1"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
